--- a/project/MiniBlog/templates/MiniBlog/base.html
+++ b/project/MiniBlog/templates/MiniBlog/base.html
@@ -8,26 +8,32 @@
 	<link rel="shortcut icon" href="css/images/favicon.ico" />
 </head>
 <body>
+<div>
   <div class="shell">
 	  <div class="border">
 		  <div id="navigation">
 			<ul>
 			    <li><a href="/" class="active">Главная</a></li>
-			    <li><a href="/admin">Админ панель</a></li>
+			    <li><a href="admin/">Админ панель</a></li>
+				<li style="float:right;"><a href="{% url 'registration' %}">Регистрация</a></li>
+				<li style="float:right;"><a href="{% url 'login' %}">Вход</a></li>
 
 			</ul>
+
 		</div>
+
 	  {% block content %}
-
 	  {% endblock%}
-
-
 	  </div>
-	  {% block footer%}
-	  <div id="footer">
-			<p class="copy right">Copyright &copy;  2022 </p>
-		</div>
-	  {%endblock%}
+
+	  <aside>
+
+	  </aside>
+
   </div>
+  <div id="footer">
+		<p class="copy right">Copyright &copy;  2022 </p>
+	</div>
+
 </body>
 </html>
