--- a/project/MiniBlog/templates/registration/login.html
+++ b/project/MiniBlog/templates/registration/login.html
@@ -4,9 +4,50 @@
 
 
 {% block content %}
-  <main>
-    <form action="">
-      {{ form.as_p }}
-    </form>
-  </main>
+<!--<form action="{% url 'login' %}" method="post">-->
+<!--    {{form.as_p}}-->
+<!--    {% if error %}-->
+<!--    <p>{{ error }}</p>-->
+<!--    {% endif %}-->
+<!--    {% csrf_token %}-->
+<!--<button>sign in</button>-->
+<!--</form>-->
+
+
+
+<div class="login-form">
+  <form action="{% url 'login' %}" method="post">
+      {%csrf_token%}
+    <h1>Login</h1>
+    <div class="content">
+      <div class="input-field">
+        <input type="text" name="username" placeholder="login">
+      </div>
+      <div class="input-field">
+        <input type="password" name="password" placeholder="Password">
+      </div>
+      <a href="#" class="link">Forgot Your Password?</a>
+    </div>
+    <div class="action">
+      <button>Sign in</button>
+    </div>
+      {% if error %}
+      <p>{{error}}</p>
+      {%endif%}
+  </form>
+</div>
+
+
+<!--  <form action="{% url 'login' %}" method="post">-->
+<!--      {%csrf_token%}-->
+<!--      <input type="text" name="username" placeholder="login">-->
+<!--      <input type="password" name="password" placeholder="Password">-->
+<!--      <button type="submit">Sign in</button>-->
+
+<!--      {% if error %}-->
+<!--      <p>{{error}}</p>-->
+<!--      {%endif%}-->
+<!--  </form>-->
+
+
 {% endblock %}
