--- a/project/MiniBlog/static/MiniBlog/css/login.css
+++ b/project/MiniBlog/static/MiniBlog/css/login.css
@@ -85,8 +85,8 @@ body {
   font-family: 'Rubik', sans-serif;
   cursor: pointer;
   text-transform: uppercase;
-  background: #e8e9ec;
-  color: #777;
+  background: #e35869;
+  color: #white;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 0;
   letter-spacing: 0.2px;
@@ -105,4 +105,7 @@ body {
 }
 .login-form .action button:nth-child(2):hover {
   background: #3c4d6d;
+}
+.error-field{
+    color: red;
 }
