--- a/project/MiniBlog/templates/registration/login.html
+++ b/project/MiniBlog/templates/registration/login.html
@@ -26,7 +26,7 @@
       <div class="input-field">
         <input type="password" name="password" placeholder="Пароль">
       </div>
-      <a href="#" class="link">Забыли пароль?</a> | <a href="{% url 'registration' %}" class="link">Зарегистрироваться</a>
+      <a href="{% url 'password_reset' %}" class="link">Забыли пароль?</a> | <a href="{% url 'registration' %}" class="link">Зарегистрироваться</a>
     </div>
     <div class="action">
       <button>Войти</button>
