--- a/project/MiniBlog/static/MiniBlog/css/login.css
+++ b/project/MiniBlog/static/MiniBlog/css/login.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: #e35869;
+  background: #bdb6b7;
   font-family: 'Rubik', sans-serif;
 }
 
@@ -85,7 +85,7 @@ body {
   font-family: 'Rubik', sans-serif;
   cursor: pointer;
   text-transform: uppercase;
-  background: #e35869;
+  background: #670a1e;
   color: #white;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 0;
